name:               typedrat-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 2.0

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  other-modules:    Typedrat.Hakyll.MinifyCss
                  , Typedrat.Hakyll.MinifyJs
  build-depends:    base >= 4.9 && < 5
                  , filepath ^>= 1.4.2.1
                  , text ^>= 1.2.3
                  , pandoc ^>= 2.2.3.2
                  , hakyll ^>= 4.12
                  , language-javascript ^>= 0.6.0.11
                  , hasmin ^>= 1.0.2
  ghc-options:      -threaded
  default-language: Haskell2010
